// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link to have text decoration underline on hover should match snapshot 1`] = `
<a
  href="https://www.npmjs.com/package/app-studio"
  target="_self"
>
  <div
    className="sc-bdfCDU jUZspA"
    color="#0072F5"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    textDecoration="none"
  >
    <div
      alignItems="center"
      className="sc-bdfCDU iOOGtj"
      display="flex"
      flexDirection="row"
      flexWrap="nowrap"
      gap={3}
      justifyContent="flex-start"
    >
      Link
    </div>
  </div>
</a>
`;

exports[`Link to open external link in a new tab should match snapshot 1`] = `
Array [
  " ",
  <a
    href="https://www.npmjs.com/package/app-studio"
    target="_blank"
  >
    <div
      className="sc-bdfCDU jUZspA"
      color="#0072F5"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      textDecoration="none"
    >
      <div
        alignItems="center"
        className="sc-bdfCDU iOOGtj"
        display="flex"
        flexDirection="row"
        flexWrap="nowrap"
        gap={3}
        justifyContent="flex-start"
      >
        External
        <div
          alignItems="center"
          className="sc-bdfCDU cVPVVZ"
          display="flex"
          height="14px"
          justifyContent="center"
          width="14px"
        >
          <svg
            fill="#0072F5"
            height="14px"
            stroke="#0072F5"
            style={Object {}}
            viewBox="0 0 50 50"
            width="14px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="SVGRepo_bgCarrier"
              strokeWidth="0"
            />
            <g
              id="SVGRepo_tracerCarrier"
              strokeLinecap="round"
              strokeLinejoin="round"
            />
            <g
              id="SVGRepo_iconCarrier"
            >
              <path
                d="M38.288 10.297l1.414 1.415-14.99 14.99-1.414-1.414z"
              />
              <path
                d="M40 20h-2v-8h-8v-2h10z"
              />
              <path
                d="M35 38H15c-1.7 0-3-1.3-3-3V15c0-1.7 1.3-3 3-3h11v2H15c-.6 0-1 .4-1 1v20c0 .6.4 1 1 1h20c.6 0 1-.4 1-1V24h2v11c0 1.7-1.3 3-3 3z"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </a>,
]
`;
